--- a/ac/config/menus_settings.cfg
+++ b/ac/config/menus_settings.cfg
@@ -298,11 +298,32 @@ menuitemcheckbox "Bullet hit: " "$bulletbouncesound" "bulletbouncesound $arg1"
 menuitemcheckbox "Bullet near-miss: " "$bulletairsound" "bulletairsound $arg1"
 
 
+alias new_poniesmode [
+    if (= $arg1 1) [ 
+        blood 0
+        gibnum 0
+        loop i (- 31 24) [ mutesound (+ (+ $i 24) 1) ] // mute pain sounds
+        echo OMG!Ponies! mode enabled, we try to hide violent content now..    
+
+    ] [ // violent
+        blood 1
+        gibnum 6
+        unmuteallsounds
+        echo OMG!Ponies! mode disabled..
+    ]
+]
+
+alias getponiesmode [
+    result (= $blood 0)
+]
+
+
 newmenu game
 
 menuitemcheckbox "Auto weapon reload: " "$autoreload" "autoreload $arg1"
 menuitemcheckbox "Show modes as acronyms: " "$modeacronyms" "modeacronyms $arg1"
 menuitemcheckbox "Auto map download: " "$autogetmap" "autogetmap $arg1"
+menuitemcheckbox "OMG!Ponies! mode: " "(getponiesmode)" "new_poniesmode $arg1"
 menuitemslider "Player skins: " 0 2 "$teamdisplaymode" 1 [normal "colored vests" "full color"] "teamdisplaymode $arg1"
 
 
